--- a/notebooks/01_data_cleaning_eda.ipynb
+++ b/notebooks/01_data_cleaning_eda.ipynb
@@ -5,9 +5,9 @@
    "id": "80c67597",
    "metadata": {},
    "source": [
-    "# Data Cleaning & Exploratory Data Analysis\n",
+    "# Waze User Churn - 01. Data Cleaning & Exploratory Data Analysis\n",
     "\n",
-    "#### **Notebook goal**  \n",
+    "**Notebook goal**  \n",
     "- Nomalize and clean Waze user churn data\n",
     "- Explore the distribution of key variables and their relationship with `churn`"
    ]
@@ -17,7 +17,7 @@
    "id": "a942464f",
    "metadata": {},
    "source": [
-    "#### **Business Problem**\n",
+    "**Business Problem**\n",
     "\n",
     "Wave wants to understand the factors that lead to user churn, to design more effective retention campaigns.\n",
     "\n",
