add full project files

--- a/notebooks/01_data_cleaning_eda.ipynb
+++ b/notebooks/01_data_cleaning_eda.ipynb
@@ -7,20 +7,16 @@
    "source": [
     "# Waze User Churn - 01. Data Cleaning & Exploratory Data Analysis\n",
     "\n",
-    "**Notebook goal**  \n",
-    "- Nomalize and clean Waze user churn data\n",
-    "- Explore the distribution of key variables and their relationship with `churn`"
+    "**Project Goal:** To analyze user churn behavior and build a model to predict it.\n",
+    "\n",
+    "**Business Problem:** Wave wants to understand the factors that lead to user churn, to design more effective retention campaigns."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a942464f",
+   "id": "c1a9bf7b",
    "metadata": {},
    "source": [
-    "**Business Problem**\n",
-    "\n",
-    "Wave wants to understand the factors that lead to user churn, to design more effective retention campaigns.\n",
-    "\n",
     "**Some main questions:**\n",
     "1. The features of app usage (drives, sessions, days active, ...) differ between churn and non-churn groups?\n",
     "2. Do device types or user segments (professional vs casual) have different churn rates?    \n",
@@ -300,7 +296,7 @@
    "id": "05ff737f",
    "metadata": {},
    "source": [
-    "#### **Column definitions**\n",
+    "**Column definitions**\n",
     "\n",
     "| Column | Meaning |\n",
     "| :--- | :--- |\n",
@@ -2421,6 +2417,45 @@
     "**Analysis**:\n",
     "- At first glance, it's puzzling why there are *more* users with zero `driving_days` than users with zero `activity_days`. However, this likely illustrates typical user behavior.\n",
     "- The two variables are related but distinct. It suggests that **a portion of user 'activity' is non-driving**; users may open the app simply to check ETAs, plan a future route, or adjust settings without initiating a drive."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c20b41c9",
+   "metadata": {},
+   "source": [
+    "## 5. Summary & Key business insights\n",
+    "\n",
+    "Based on the comprehensive cleaning and exploratory data analysis I performed in this notebook, I have several key findings and actionable insights.\n",
+    "\n",
+    "### 5.1 Data quality & structure\n",
+    "* Several numerical features (`sessions`, `drives`, `total_sessions`, `total_navigations_favored`) are **highly right-skewed with extreme outliers**. This indicates that a small group of “power users” generate very high usage volumes compared to the typical user.\n",
+    "* The target variable is **strongly imbalanced: roughly 82.3% retained users vs. 17.7% churned users** (11,763 vs. 2,536). Because of this imbalance, I have concluded that relying on raw accuracy would be misleading. My evaluation in the modeling phase must emphasize **Recall, Precision, F1-score, and AUC** to ensure the model effectively identifies at-risk users.\n",
+    "\n",
+    "### 5.3 Engagement & tenure as core churn drivers\n",
+    "\n",
+    "* Engagement intensity measured by driving behavior is highly predictive: **users with more driving days in the last month have substantially lower churn rates**, while users with very few or zero recent driving days churn more frequently.\n",
+    "* The proportion of sessions in the last month (`percent_sessions_in_last_month`) captures an important distinction:\n",
+    "    * **New or recently onboarded users tend to have a very high proportion of their lifetime activity in the last month**, yet many of them churn quickly if they do not find sufficient ongoing value.\n",
+    "    * **Long-tenure users show a low percentage of recent sessions** relative to their lifetime total but **still churn at much lower rates**.\n",
+    "* The “age” of the user (`n_days_after_onboarding`) is a direct and strong indicator of churn:\n",
+    "    * **Churn density is heavily concentrated early in the lifecycle** (around the first several hundred days after onboarding).\n",
+    "    * **Users who remain for a long time (e.g., 1,000–3,000+ days) have much lower churn rates** and form the core loyal user base.\n",
+    "* Combining these findings, **churn risk is “front-loaded”**: the critical period for churn is early in a user’s journey, especially when engagement does not ramp up.\n",
+    "\n",
+    "> **Business implication:** Retention efforts should **focus on early-stage users** those with low tenure and low recent driving activity and aim to accelerate activation and repeated usage in the first months after onboarding.\n",
+    "\n",
+    "### 5.4 Device type & feature redundancy\n",
+    "\n",
+    "* The distribution of device types is skewed toward iPhone (~64.5%) vs. Android (~35.5%), but the **churn proportion within each device group is very similar**.\n",
+    "* **Device type (`device`) therefore does not appear to be a major driver of churn** in this dataset and is unlikely to be a key segmentation axis for retention strategy.\n",
+    "* The correlation analysis reveals several near-duplicate or redundant features:\n",
+    "    * `sessions` and `drives` are **perfectly correlated (0.99)**.\n",
+    "    * `activity_days` and `driving_days` are **almost perfectly correlated (0.95)**.\n",
+    "    * `duration_minutes_drives` and `driven_km_drives` are **strongly correlated (0.69)**.\n",
+    "* `percent_sessions_in_last_month` is inversely related to user tenure (`n_days_after_onboarding`), reinforcing the connection between recency and age.\n",
+    "\n",
+    "Overall, my EDA indicates that **Waze churn is primarily an early-lifecycle and low-engagement problem**, rather than a device or long-term usage problem. This will guide both my feature engineering and the design of targeted retention interventions in the next notebooks."
    ]
   }
  ],
