--- a/notebooks/02_hypothesis_testing.ipynb
+++ b/notebooks/02_hypothesis_testing.ipynb
@@ -2,17 +2,23 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "02e11e27",
+   "id": "332b8b89",
    "metadata": {},
    "source": [
     "# Waze User Churn - 02. Hypothesis Testing\n",
     "\n",
-    "**Notebook 2 Goal:** In this notebook, we move from descriptive analysis (from Notebook 01) to formal statistical hypothesis testing. We focus on two key questions:\n",
+    "**Project Goal:** To analyze user churn behavior and build a model to predict it.\n",
+    "\n",
+    "**Notebook 2 Goal:** In this notebook, I move from descriptive analysis (from Notebook 01) to formal statistical hypothesis testing. Focusing on two key questions:\n",
     "\n",
     "1.  Do iPhone and Android users differ meaningfully in their driving behaviour?\n",
     "2.  Is there a statistically significant association between device type and churn?\n",
     "\n",
-    "Answering these questions will help us understand whether `device_type` should be treated as a major driver of churn or only as a secondary, low-importance feature in our model."
+    "Answering these questions will help understand whether `device_type` should be treated as a major driver of churn or low-importance feature in our model.\n",
+    "\n",
+    "To do this, I will load the **cleaned data** from Notebook 01 and conduct two separate tests:\n",
+    "1. **Two-Sample T-Test:** To determine if there is a significant difference in the mean number of `drives` based on `device` type.\n",
+    "2. **Chi-Square Test:** To determine if there is a significant association between `device` type and user `label` (churned vs. retained)."
    ]
   },
   {
@@ -22,7 +28,7 @@
    "source": [
     "## 1. Import Libraries and Load Data\n",
     "\n",
-    "We will import `pandas` for data manipulation, `numpy` for calculations (like Cohen's d), and `scipy.stats` for the statistical tests and load the `waze_clean.csv` file that we processed and saved in Notebook 01."
+    "I will import `pandas` for data manipulation, `numpy` for calculations (like Cohen's d), and `scipy.stats` for the statistical tests and load the `waze_clean.csv` file that I processed and saved in Notebook 01."
    ]
   },
   {
@@ -42,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "2899a2ba",
    "metadata": {},
    "outputs": [
@@ -194,7 +200,7 @@
     "df = pd.read_csv('../data/processed/waze_clean.csv')\n",
     "\n",
     "# display the first few rows to verify\n",
-    "df.head()"
+    "df.head();"
    ]
   },
   {
@@ -231,7 +237,7 @@
     "- **$H_A$ (Alternative Hypothesis)**: there is a difference in average drives between the two groups.\n",
     "$$\\mu_{\\text{iPhone}} \\neq \\mu_{\\text{Android}}$$\n",
     "\n",
-    "We use **Welch’s two-sample t-test** (unequal variances) at a significance level of **$\\alpha = 0.05$**."
+    "I use **Welch’s two-sample t-test** (unequal variances) at a significance level of **$\\alpha = 0.05$**."
    ]
   },
   {
@@ -241,12 +247,12 @@
    "source": [
     "### 1.2. Method\n",
     "\n",
-    "-   We split the cleaned dataset into two samples based on `device_type`:\n",
+    "-   Split the cleaned dataset into two samples based on `device_type`:\n",
     "    -   `iphone_drives`: `drives` for users on iPhone\n",
     "    -   `android_drives`: `drives` for users on Android\n",
     "-   Because the sample size is large, the Central Limit Theorem makes the t-test reasonably robust to non-normality.\n",
-    "-   We run Welch’s t-test (`equal_var=False`) to compare the two means.\n",
-    "-   We also compute **Cohen’s d** as an effect-size measure to quantify how large any difference is in practical terms."
+    "-   Run Welch’s t-test (`equal_var=False`) to compare the two means.\n",
+    "-   Compute **Cohen’s d** as an effect-size measure to quantify how large any difference is in practical terms."
    ]
   },
   {
@@ -373,7 +379,7 @@
    "source": [
     "### 1.4. Interpretation\n",
     "\n",
-    "From a statistical perspective, we **fail to reject the null hypothesis $H_0$**.\n",
+    "From a statistical perspective, can conclude that **fail to reject the null hypothesis $H_0$**.\n",
     "The average number of drives is very similar for iPhone and Android users, and the effect size is practically negligible.\n",
     "\n",
     "**From a business perspective, this means:**\n",
@@ -381,7 +387,7 @@
     "-   Device type does **not** appear to drive materially different driving behaviour in this dataset.\n",
     "-   There is **no evidence** that one platform systematically encourages more or fewer drives than the other.\n",
     "\n",
-    "As a result, we do not treat device type as a primary driver of driving intensity; instead, we will rely on direct usage metrics (e.g., drives, sessions,duration,..) as the main behavioural features."
+    "As a result, I **do not treat device type as a primary driver of driving intensity**; instead, I will rely on direct usage metrics (e.g., drives, sessions,duration,..) as the main behavioural features."
    ]
   },
   {
@@ -405,12 +411,12 @@
    "source": [
     "### 2.1. Statistical formulation\n",
     "\n",
-    "We consider the relationship between:\n",
+    "Consider the relationship between:\n",
     "\n",
     "-   `device_type` (two categories: iPhone vs Android), and\n",
     "-   `label` (binary churn label: retained vs churned).\n",
     "\n",
-    "We test:\n",
+    "Test:\n",
     "\n",
     "-   **$H_0$ (Null Hypothesis)**:\n",
     "    `device_type` and `label` are **independent**.\n",
@@ -420,7 +426,7 @@
     "    `device_type` and `label` are **not independent**.\n",
     "    (there is an association between device type and churn.)\n",
     "\n",
-    "We use a **Chi-square test of independence** at **$\\alpha = 0.05$**."
+    "Use a **Chi-square test of independence** at **$\\alpha = 0.05$**."
    ]
   },
   {
@@ -430,7 +436,7 @@
    "source": [
     "### 2.2. Method\n",
     "\n",
-    "-   We construct a contingency table (crosstab) of observed frequencies:\n",
+    "-   Construct a contingency table (crosstab) of observed frequencies:\n",
     "\n",
     "$$\\text{contingency} =\n",
     "\\begin{bmatrix}\n",
@@ -438,13 +444,13 @@
     "\\text{count of Android active} & \\text{count of Android churn}\n",
     "\\end{bmatrix}$$\n",
     "\n",
-    "-   We apply `scipy.stats.chi2_contingency` to obtain:\n",
+    "-   Apply `scipy.stats.chi2_contingency` to obtain:\n",
     "    -   Chi-square statistic\n",
     "    -   p-value\n",
     "    -   Degrees of freedom\n",
     "    -   Expected frequencies under $H_0$\n",
     "\n",
-    "-   We verify that **all expected cell counts are larger than 5**, so the chi-square test assumptions are satisfied."
+    "-   Verify that **all expected cell counts are larger than 5**, so the chi-square test assumptions are satisfied."
    ]
   },
   {
@@ -628,17 +634,17 @@
    "id": "d051ab49",
    "metadata": {},
    "source": [
-    "### 2.4. Interpretation\n",
+    "## 2.4. Interpretation\n",
     "\n",
-    "We again **fail to reject the null hypothesis $H_0$**.\n",
+    "Again **fail to reject the null hypothesis $H_0$**.\n",
     "Within this dataset, there is **no statistically significant evidence** that churn depends on device type.\n",
     "\n",
     "**From a business standpoint:**\n",
     "\n",
-    "-   We do **not** observe a strong platform-specific churn pattern (iOS vs Android).\n",
-    "-   Churn appears to be driven more by engagement and usage patterns than by the underlying device ecosystem.\n",
+    "* Do **not** observe a strong platform-specific churn pattern (iOS vs Android).\n",
+    "* Churn appears to be driven more by engagement and usage patterns than by the underlying device ecosystem.\n",
     "\n",
-    "As a result, we treat `device_type` as, at most, a **secondary feature** in the churn model. We will still include it in the feature set, but we do not expect it to carry major predictive power compared with core usage features (drives, sessions, activity days, etc.)."
+    "As a result, I **will not include** `device_type` in the feature set for the churn model. I do not expect it to carry any significant predictive power compared with core usage features (drives, sessions, activity days, etc.), and removing it helps simplify the model."
    ]
   },
   {
@@ -648,14 +654,14 @@
    "source": [
     "## 3. Overall Conclusions from Hypothesis Testing\n",
     "\n",
-    "Across both tests, our findings consistently point to the same conclusion:\n",
+    "Across both tests, these findings consistently point to the same conclusion:\n",
     "\n",
     "1.  **Driving behaviour (average number of drives)** is essentially the same between iPhone and Android users.\n",
     "2.  **Churn rates** do not differ significantly by device type.\n",
     "\n",
-    "These results confirm our visual analysis from Notebook 01 and suggest that **device type is not a primary driver of churn** in this sample.\n",
+    "These results confirm my visual analysis from Notebook 01 and suggest that **device type is not a primary driver of churn** in this sample.\n",
     "\n",
-    "In the subsequent modeling step (`03_feature_engineering_modeling.ipynb`), we will therefore focus on behavioural and recency-related features as the main predictors of churn risk, while including device type only as a supplementary variable."
+    "In the subsequent modeling step (`03_modeling.ipynb`), I will therefore **exclude** `device_type` from the feature set and focus exclusively on behavioural and recency-related features as the main predictors of churn risk."
    ]
   }
  ],
