--- a/notebooks/03_modeling.ipynb
+++ b/notebooks/03_modeling.ipynb
@@ -2279,7 +2279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "3bb19f79",
    "metadata": {},
    "outputs": [
@@ -2298,11 +2298,11 @@
     "# plot the feature importances\n",
     "sorted_features = [f[0] for f in feature_importance]\n",
     "sorted_importances = [f[1] for f in feature_importance]\n",
-    "sorted_std = [f[2] for f in feature_importance] # This will now work\n",
+    "sorted_std = [f[2] for f in feature_importance]\n",
     "\n",
     "plt.figure(figsize=(10, 4))\n",
     "plt.barh(sorted_features, sorted_importances, xerr=sorted_std, color='steelblue', capsize=5)\n",
-    "plt.gca().invert_yaxis()  # Most important feature on top\n",
+    "plt.gca().invert_yaxis()  # most important feature on top\n",
     "\n",
     "plt.title(\"Permutation importance of final model\")\n",
     "plt.ylabel(\"Features\")\n",
